fixed structure and editted build.sh

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ src/Database/Database.class
 src/Database/Database.jar
 src/Database/User.class
 src/Database/Word.class
+src/UDPServer.class
 src/UDPClient.jar
 src/UDPServer.jar
+src/Database.jar
 src/UDPServer.java
