perfect build.sh

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 out
+bin
 .idea/workspace.xml
 lib/Database.jar
-src/Database/Database.class
-src/Database/Database.jar
-src/Database/User.class
-src/Database/Word.class
-src/UDPServer.class
-src/UDPClient.jar
-src/UDPServer.jar
-src/Database.jar
-src/UDPServer.java
+src/*.jar
+src/*.class
