learned how to compile java file,classpath sth and jar usage by man jar; finished first version of auto build shell script; however,need more job to fix the sqlite file init logic

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 out
 bin
 .idea/workspace.xml
-lib/Database.jar
-src/*.jar
-src/*.class
+UDPServer/*.class
+UDPServer/Database/*.class
+UDPClient/*.class
